# cross-validation-for-time-series-data

./: 11_Time-Series-Cross-Validation.py  2025-01-17_Cross-Validation-for-Time-Series-Data-51fd11c38e2b.py  CI in time series.ipynb  CI in time series.py  README.md  article.md  benchmark_rust.py  config.yaml  cross-validation.py  generate_images.py  main.py  pyproject.toml  requirements.txt
11_Time-Series-Cross-Validation/: generate_images.py
11_Time-Series-Cross-Validation/code/: 11_Time-Series-Cross-Validation.py
11_Time-Series-Cross-Validation/content/: 11_Time-Series-Cross-Validation.md
polars_duckdb/: core.py
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py  core.py
